results/SpecGenBench/conversational/log-CalcDuration-2023_08_26_23_28_57.txt
class CalcDuration {
    //@ requires timeSeries != null;
    //@ requires duration > 0;
    //@ ensures \result >= 0;
    //@ ensures \result == (\sum int i; 0 <= i && i < timeSeries.length; calcDurationHelper(timeSeries, duration, i));
    public int calcDuration(int[] timeSeries, int duration) {
        int ans = 0;
        int expired = 0;
        //@ maintaining 0 <= i && i <= timeSeries.length;
        //@ maintaining ans == (\sum int j; 0 <= j && j < i; calcDurationHelper(timeSeries, duration, j));
        //@ maintaining (\forall int j; 0 <= j && j < i; timeSeries[j] >= expired);
        //@ maintaining (\forall int j; 0 <= j && j < i; expired == timeSeries[j] + duration);
        for (int i = 0; i < timeSeries.length; ++i) {
            if (timeSeries[i] >= expired) {
                ans += duration;
            } else {
                ans += timeSeries[i] + duration - expired;
            }
            expired = timeSeries[i] + duration;
        }
        return ans;
    }

    //@ requires timeSeries != null;
    //@ requires duration > 0;
    //@ requires 0 <= i && i < timeSeries.length;
    //@ ensures \result >= 0;
    private int calcDurationHelper(int[] timeSeries, int duration, int i) {
        if (timeSeries[i] >= timeSeries[i] + duration) {
            return duration;
        } else {
            return timeSeries[i] + duration - (timeSeries[i] + duration);
        }
    }
}
/home/max/Documents/JMLGPT/tmp/CalcDuration.java:5: error: An identifier with private visibility may not be used in a ensures clause with public visibility
    //@ ensures \result == (\sum int i; 0 <= i && i < timeSeries.length; calcDurationHelper(timeSeries, duration, i));
                                                                         ^
/home/max/Documents/JMLGPT/tmp/CalcDuration.java:5: warning: A non-pure method is being called where it is not permitted: CalcDuration.calcDurationHelper(int[],int,int)
    //@ ensures \result == (\sum int i; 0 <= i && i < timeSeries.length; calcDurationHelper(timeSeries, duration, i));
                                                                                           ^
/home/max/Documents/JMLGPT/tmp/CalcDuration.java:10: warning: A non-pure method is being called where it is not permitted: CalcDuration.calcDurationHelper(int[],int,int)
        //@ maintaining ans == (\sum int j; 0 <= j && j < i; calcDurationHelper(timeSeries, duration, j));
                                                                               ^
1 error
2 warnings

